|                                                                 |
|         - AWStats:                                              |
|               * apache: set statsdir if awstats is enabled      |
|               * gui: disable stats-alias in client menu         |
\_________________________________________________________________/

2007-06-17 Benedikt Heintel
	- CONFIGS:
		* Fixed: FastCGI config missing </IfModule>
	- GUI:
		* Fixed #405: reload.gif instead of reload.png
	- SETUP:
		* Fixed: error on install; PHP Version was not asked
		* Partly fixed #404: new makefile errors

2007-06-16 Raphael Geissert
	- GUI:
		* Fixed #197: Link to user's domain
		* Replaced some icons with new ones
		* client/add_subdomain.php displays subdomain has no correct mount point when first opening

2007-06-15 Raphael Geissert
	- TOOLS:
		* Removed ispcp-mkdirs.pl
	- ENGINE:
		* Now engine/tools/ispcpphptemp.sh uses per-domain php.ini (4 and 5) settings
	- CONFIGS:
		* Makefile now checks for ENV var INST_PREF and use it instead of default
		* Added detection of lenny/sid and not just etch
		* Fixed #390: Extra character in fedora's languages.sql
		* Rewritten init.d/ispcp_network by adding start|stop|restart|force-restart targets,
			configurable via /etc/default/ispcp_network and added patch from #257
		* Added PHP_VERSION which acts as 4/5 switch
		* Fixed #323: main.cf and master.cf are installed before the backups are made
	- GUI:
		* Removed extra empty new line at the top of reseller/domain_statistics.php
		* Removed hard-coded ftp-shell and phptmp dir
		* Fixed #389: ftp users can't be edited
		* Fixed #401: account with ftp accounts disabled can't be created
		* Fixed #293: account with mail accounts disabled can't be created
		* Custom logo is now deleted (not only removed from database)
	- SETUP:
		* Fixed #274: PHP4/5 switch added
		* Removed hard-coded phptmp dir being set on PMA's config.inc.php
		* Uninstaller now restores the resolver
	- DOCS: