@@ -1,6 +1,6 @@
 
-$main::db_pass_key = 'G%ID2Ty2bcp;?-?,C>/C/_CakBwnY,z~';
+$main::db_pass_key = '{KEY}';
 
-$main::db_pass_iv = 'A7K1&]C9';
+$main::db_pass_iv = '{IV}';
 
 return 1;
