@@ -38,13 +38,13 @@ install:
 	cp -R ./reseller $(SYSTEM_GUI_ROOT)
 	cp -R ./client $(SYSTEM_GUI_ROOT)
 	cp -R ./include $(SYSTEM_GUI_ROOT)
-	rm -rf $(SYSTEM_GUI_ROOT)/{admin,reseller,client,include}/Makefile
 	cp -R ./domain_default_page $(SYSTEM_GUI_ROOT)
 	cp -R ./errordocs $(SYSTEM_GUI_ROOT)
-	#cp -R ./images $(SYSTEM_GUI_ROOT)
 	cp -R ./themes $(SYSTEM_GUI_ROOT)
 	cp -R ./tools $(SYSTEM_GUI_ROOT)
 	cp -R ./orderpanel $(SYSTEM_GUI_ROOT)
 	cp -R ./phptmp $(SYSTEM_GUI_ROOT)
 uninstall:
 	rm -rf $(SYSTEM_GUI_ROOT)
+
+.PHONY: install uninstall
