@@ -1,7 +1,7 @@
 <?php
 
-$ispcp_db_pass_key = 'G%ID2Ty2bcp;?-?,C>/C/_CakBwnY,z~';
+$ispcp_db_pass_key = '{KEY}';
 
-$ispcp_db_pass_iv = 'A7K1&]C9';
+$ispcp_db_pass_iv = '{IV}';
 
 ?>
